--- a/style.css
+++ b/style.css
@@ -132,7 +132,9 @@ h4{
 }
 .col_4:hover{
     transform: translateY(-30px);
-} 
+}
+/*-------offer------*/ 
+
 .offer{
     background: radial-gradient(#fff, #ffd6d6);
     margin-top: 80px;
@@ -143,4 +145,37 @@ h4{
 }
 small{
     color: #555;
+}
+
+/*..............testimonial.........*/
+
+.testimonial{
+    padding-top: 100px;
+}
+.testimonial .col_3{
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition: transform 0.5s;
+}
+.testimonial .col_3 img{
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+.testimonial .col_3:hover{
+     transform: translateY(-10px);
+}
+.fa.fa-quote-left{
+    font-size: 35px;
+    color: #ff523b;
+}
+.col_3{
+    font-size: 12px;
+    color: #777;
+}.testimonial .col_3 h3{
+    font-weight: 600px;
+    color: #555;
+    font-size: 16px;
 }
